test/fixtures/public/fail/semantic/extra/returns.jmm
/*  REASON:
    Variable already defined in the scope
*/

class T {
    public static void main(String[] a) {
    }

    public int test(){
        return true;
    }
}
